@@ -8,6 +8,9 @@ BUGFIXES:
   ZOOKEEPER-2477: documentation should refer to Java cli shell and not
   C cli shell (Abraham Fine via phunt)
 
+  ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
+  (Camille via phunt)
+
 IMPROVEMENTS:
 
 
